--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "translate_app",
   "version": "1.0.0",
   "description": "Bai tap lon nhom 8",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon ./src/app.js",
+    "start": "node ./src/app.js"
   },
   "repository": {
     "type": "git",
@@ -14,5 +16,14 @@
     "nodejs"
   ],
   "author": "Nhom 8",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "16.0.3",
+    "ejs": "3.1.8",
+    "express": "4.18.2",
+    "mysql2": "2.3.3"
+  },
+  "devDependencies": {
+    "nodemon": "2.0.20"
+  }
 }
