--- a/.env
+++ b/.env
@@ -10,3 +10,8 @@ DB_PORT = 3307
 DB_USER = root
 DB_PASSWORD = 123456
 DB_NAME = translate_app
+
+#authentication:
+JWT_SECRET = demojwt
+JWT_EXPIRE = 2000s
+COOKIES_EXPIRE = 2
